removed media-grid from sidebar container to fix layout bug

--- a/wp-content/themes/_design/_src/screen.scss
+++ b/wp-content/themes/_design/_src/screen.scss
@@ -322,14 +322,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 		padding: 10px;
 	}
 
-	@media (min-width: 600px) and (max-width: 900px){
-		@include media-grid(2,20px);
-
-		.widget-container {
-			// @extend .media-block;
-		}
-	}
-
 	@media (min-width: 900px){
 		border: 0;
 	}
